# soccer-vision

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/: 2026-06-26-codebase-audit.md  2026-06-26-status-and-open-issues.md  bakeoff-results.md
docs/superpowers/plans/: 2026-05-27-phase-0-1-scaffolding-and-bakeoff.md  2026-05-28-phase-2-3-finetune-and-homography.md  2026-05-29-pipeline-orchestrator.md  2026-06-03-homography-propagation.md  2026-06-03-pitch-keypoint-finetune.md  2026-06-03-propagation-performance.md  2026-06-05-interactive-anchor-labeler.md  2026-06-11-dataset-export.md  2026-06-11-labeler-fullgame.md  2026-06-11-track-hygiene.md  2026-06-24-pitch-eval-framework.md  2026-06-25-camera-calibration-phase1.md  2026-06-25-camera-calibration-phase2.md  2026-06-25-camera-calibration-phase3a.md  2026-06-25-camera-calibration-phase3b1.md  2026-06-26-calibration-global-homography.md  2026-06-26-camera-calibration-phase3b2.md  2026-06-26-labeler-async-refit.md  2026-06-26-labeler-gated-propagation.md  (+1 more)
examples/: acceptance_pitch.ipynb  autolabel_pitch.ipynb  bakeoff_atfa.ipynb  bakeoff_roboflow.ipynb  bakeoff_tz.ipynb  calib_anchor_compare.ipynb  calib_labeler_validate.py  calib_validate.ipynb  colab_bakeoff.ipynb  colab_homography_probe.ipynb  colab_homography_probe_v2.ipynb  colab_homography_propagation.ipynb  colab_pipeline_demo.ipynb  eval_ball_detector.ipynb  eval_pitch.ipynb  extract_pitch_frames.ipynb  finetune_ball.ipynb  finetune_pitch.ipynb  pull_trace_clip.py
scripts/: annotate_corners.py  extract_ball_frames.py
(+22 files in other folders)
