[project]
name = "soccer-vision-workspace"
version = "0.0.0"
description = "Workspace root for soccer-vision"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # enforced via ruff format which respects [tool.ruff] line-length

[tool.mypy]
strict = true
python_version = "3.11"
files = ["packages/soccer-vision/src", "packages/soccer-vision/tests"]

[tool.pytest.ini_options]
testpaths = ["packages/soccer-vision/tests"]
addopts = "--cov=soccer_vision --cov-report=term-missing"
